/**
 * Clase principal para ejecutar la aplicación.
 * Crea una instancia
 */
public class Main {

    public static void main(String[] args) {
        App app = new App();
        app.run();
    }

}
